--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body background="Background.gif">
+<body background="background.webp">
 <center>
 
 <h1 id="heading">Object Detector</h1>
+<br>
+<br>
 <br>
 <a id="link" href="" >Toys</a>
 <br>
